--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,8 +19,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:hardwareAccelerated="false"
-            android:label="@string/app_name" >
+            android:hardwareAccelerated="false" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
